# fundamental-fastapi-project

./: pyproject.toml
alembic/: env.py
alembic/versions/: 7f466f36ae9f_create_table_user.py
app/: config.py  crud.py  main.py  model.py  order.py  payment.py  repository.py  router.py  schema.py
app/crud/: order_crud.py  payment_crud.py  product_crud.py  users_crud.py
app/models/: Order_model.py  Payment_model.py  Product_model.py  Users_model.py
app/schema/: Order_schema.py  Product_schema.py  Users_schema.py
app/services/: Order_service.py  Product_service.py  Users_service.py
migration/: env.py
migration/versions/: 5f6a9afed35c_update.py
